- fix margin & h2 in index.html - عبيلوا و اديلو البتاعة الشفافة اللي كانت في الصفحة الرئيسية كان واحده فيهم بايظة و نازلة تحت بتعمل overflow

--- a/styles/index.css
+++ b/styles/index.css
@@ -145,25 +145,28 @@ nav .nav {
 }
 
 .s_container img {
-    width: 260px;
+    width: 20vw;
+    height: 43vh;
 }
 
 .s_container a {
     text-decoration: none;
     position: relative;
-
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
 }
 
 .s_container a h2 {
     position: absolute;
-    left: 22px;
-    top: 200px;
+    /* one can push them down too xD *? 
+    /* top:36vh; */
     border: 1px solid rgba(255, 255, 255, 0.37);
     padding: 15px 80px;
     font-size: 14px;
     color: var(--header-color);
     background-color: rgba(255, 255, 255, 0.37);
-
 }
 
 .s_container a:hover h2 {
